<resources>
    <string name="app_name">DataBashPro</string>
    <string name="submit_string">提交</string>
    <string name="date_format_string">yyyy/MM/dd</string>
    <string name="hint_date_format_string">yyyy/MM/dd</string>
    <!--读者界面string-->
    <string name="add_reader_string">添加读者</string>
    <string name="delete_reader_string">删除读者</string>
    <string name="alter_reader_string">修改读者</string>
    <string name="query_reader_string">查看读者</string>
    <!--书籍界面string-->
    <string name="delete_book_string">删除书籍</string>
    <string name="add_book_string">添加书籍</string>
    <string name="alter_book_string">修改书籍</string>
    <string name="query_book_string">查看书籍</string>

    <string name="get_reader_id_text_string">输入读者ID:</string>
    <string name="get_book_id_text_string">输入书籍ID:</string>
    <!--读者展示string-->
    <string name="show_reader_id_string">读者ID:</string>
    <string name="show_reader_name_string">读者姓名:</string>
    <string name="show_reader_sex_string">读者性别:</string>
    <string name="show_reader_reg_date_string">读者注册时间:</string>
    <!--书籍展示string-->
    <string name="show_book_id_string">书籍ID:</string>
    <string name="show_book_name_string">书名:</string>
    <string name="show_book_author_string">作者:</string>
    <string name="show_book_public_string">出版社:</string>
    <string name="show_book_public_date_string">出版日期:</string>
    <string name="show_book_reg_date_string">登录日期:</string>
    <string name="show_is_borrowed_string">是否被借阅:</string>
    <!--借书按钮-->
    <string name="borrow_book_string">借书</string>
    <string name="return_book_string">还书</string>
    <string name="query_borrow_book_string">查询借书</string>
    <string name="show_reader_borrow_name_string">借阅者:</string>
    <string name="show_borrow_time_string">借阅时间:</string>
</resources>
